<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.pocketdiary.SettingScreen"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/name_id"
        android:layout_width="208dp"
        android:layout_height="0dp"
        android:text="@string/name"
        android:textColor="@color/colorRed"
        android:textSize="70px"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/User_name_id"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/User_name_id"
        android:layout_marginLeft="16dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pin_lock_id"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/pin_lock"
        android:textColor="@color/colorRed"
        android:textSize="70px"
        android:gravity="center_vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/name_id"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/name_id"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/name_id"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/User_name_id"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name"
        android:gravity="center"
        android:backgroundTint="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintRight_toRightOf="@+id/switch1"
        android:layout_marginTop="26dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintVertical_bias="0.0"
        android:textSize="60px"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/current_pin"
        android:layout_marginEnd="106dp"
        app:layout_constraintRight_toRightOf="@+id/current_pin"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="106dp"/>

    <EditText
        android:id="@+id/current_pin"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/current_pin"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="178dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/new_pin1"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/new_pin"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/current_pin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/current_pin"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/current_pin"
        android:textSize="50px"/>

    <EditText
        android:id="@+id/new_pin2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeat_pin"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:background="@drawable/button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/new_pin1"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/new_pin1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/new_pin1"
        android:textSize="50px"/>

    <Button
        android:id="@+id/editFriends"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/edit_friends"
        style="@style/ButtonRed"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/editCategories"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="125dp"
        app:layout_constraintLeft_toLeftOf="@+id/editCategories"
        app:layout_constraintHorizontal_bias="0.0"
        android:textSize="60px"/>

    <Button
        android:id="@+id/editCategories"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:text="@string/edit_categories"
        style="@style/ButtonRed"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editFriends"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="60px"/>

    <Button
        android:id="@+id/save"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/save"
        style="@style/ButtonRed"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        android:textSize="45px"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/cancel"
        style="@style/ButtonRed"
        app:layout_constraintRight_toLeftOf="@+id/save"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="31dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="45px"/>

    <TextView
        android:id="@+id/on_off"
        android:textSize="60px"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:textColor="@color/colorRed"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/current_pin"
        app:layout_constraintRight_toRightOf="@+id/current_pin"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/pin_lock_id"
        android:gravity="center_vertical"
        android:layout_marginRight="22dp" />

</android.support.constraint.ConstraintLayout>