<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sw2017.pocketdiary.StartScreen"
    android:background="@drawable/background"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:text="@string/pocketdiary"
        android:fontFamily="serif"
        android:textSize="20pt"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/create_entry"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/create_entry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_entry"
        style="@style/ButtonWhite"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/review"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="19dp"
        app:layout_constraintLeft_toLeftOf="@+id/review" />

    <Button
        android:id="@+id/review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/review"
        style="@style/ButtonWhite"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/statistic"
        app:layout_constraintRight_toRightOf="@+id/statistic"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintLeft_toLeftOf="@+id/statistic"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/statistic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        style="@style/ButtonWhite"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/picture"
        android:layout_width="217dp"
        android:layout_height="209dp"
        android:background="@null"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="53dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/pictureField"
        android:layout_width="214dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/button"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/picture"
        app:layout_constraintTop_toTopOf="@+id/picture" />

</android.support.constraint.ConstraintLayout>
